trunk/Archive2/ea/3322c7cd6cc2d1/output
main.cpp:17:40: error: expected expression
    std::cout << is_complete<int>(0);  << '\n'  
                                       ^
1 error generated.
